terraform/manifests/sonar-mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonar-mysql-deployment
  labels:
    app: sonar-mysql
spec:
  replicas: 1
  serviceName: sonar-mysql
  selector:
    matchLabels:
      app: sonar-mysql
  template:
    metadata:
      labels:
        app: sonar-mysql
    spec:
      containers:
      - name: sonar-mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: mysql-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
