terraform/manifests/sonar-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonar
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
      - sonarqube.nmatheus.cloud
      secretName: sonar-tls
  rules:
  - host: sonarqube.nmatheus.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: sonar-svc
          servicePort: 80
